# tum_ardrone

./: CMakeLists.txt  README.md  killAll.sh
flightPlans/: initDemo.txt  initNewMap.txt
launch/: run_tmux.sh  tum_ardrone.launch  tum_ardrone_debug.launch  tum_ardrone_gterminal_debug.launch  tum_ardrone_valgrind.launch  watchdog.launch
src/UINode/: RosThread.cpp  tum_ardrone_gui.cpp  tum_ardrone_gui.h  tum_ardrone_gui.pro.user.e30b8b0  tum_ardrone_gui.ui
src/WatchDog/: WatchDogThread.cpp  WatchDogThread.h  main_watchdog.cpp
src/autopilot/: ControlNode.cpp  main_autopilot.cpp
src/build-tum_ardrone_gui-Desktop_Qt_5_4_0_GCC_64bit-Debug/: Makefile
src/stateestimation/: DroneKalmanFilter.cpp  DroneKalmanFilter.h  EstimationNode.cpp  EstimationNode.h  GLWindow2.cc  GLWindow2.h  GLWindowMenu.cc  Logger.cpp  MapView.cpp  MapView.h  PTAMWrapper.cpp  PTAMWrapper.h  Predictor.cpp  Predictor.h  main_stateestimation.cpp
src/stateestimation/Backup Files/: DroneKalmanFilter.cpp  EstimationNode.cpp  MapView.h  Predictor.h  main_stateestimation.cpp
src/stateestimation/PTAM/: Bundle.cc  Bundle.h  HomographyInit.cc  LevelHelpers.h  MD5.cc  MD5.h  MD5Wrapper.cc  MapMaker_ORIG.cc  MapPoint.cc  MapSerializer.cc  MapSerializer.h  MiniPatch.h  PatchFinder.cc  Relocaliser.cc  ShiTomasi.h  SmallBlurryImage.cc  SmallBlurryImage.h  Tracker.cc  Utils.cc  VideoSource.h  tinyxmlerror.cc  tinyxmlparser.cc
src/stateestimation/PTAMM/: ATANCamera.cc  ATANCamera.h  Bundle.cc  Bundle.h  HomographyInit.cc  HomographyInit.h  KeyFrame.cc  KeyFrame.h  LevelHelpers.h  MD5.cc  MD5.h  MD5Wrapper.cc  MD5Wrapper.h  MEstimator.h  Map.cc  Map.h  MapLockManager.cc  MapLockManager.h  MapMaker.cc  MapMaker.h  MapPoint.cc  MapPoint.h  MapSerializer.cc  MapSerializer.h  MiniPatch.cc  MiniPatch.h  PatchFinder.cc  PatchFinder.h  Relocaliser.cc  Relocaliser.h  ShiTomasi.cc  ShiTomasi.h  SmallBlurryImage.cc  SmallBlurryImage.h  SmallMatrixOpts.h  Tracker.cc  Tracker.h  TrackerData.h  Utils.cc  Utils.h  (+6 more)
